# QML_API

QMl/: readme.md
QMl/Flask_API/: .pyhon_flash.py.swp  back_end_server.py  decorator.py  pyhon_flash.py
QMl/build-jsonData-Desktop_Qt_6_2_4_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appjsonData  build.ninja  cmake_install.cmake
QMl/build-jsonData-Desktop_Qt_6_2_4_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
QMl/build-jsonData-Desktop_Qt_6_2_4_GCC_64bit-Debug/.rcc/: appjsonData_raw_qml_0.qrc  qmake_jsonData.qrc  qrc_appjsonData_raw_qml_0.cpp  qrc_qmake_jsonData.cpp
QMl/build-jsonData-Desktop_Qt_6_2_4_GCC_64bit-Debug/appjsonData_autogen/: deps
QMl/build-jsonData-Desktop_Qt_6_2_4_GCC_64bit-Debug/jsonData/: Main.qml
QMl/build-jsonData-Desktop_Qt_6_2_4_GCC_64bit-Debug/meta_types/: appjsonData_json_file_list.txt  appjsonData_json_file_list.txt.timestamp  qt6appjsondata_debug_metatypes.json.gen
QMl/build-jsonData-WebAssembly-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appjsonData  appjsondata_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
QMl/build-jsonData-WebAssembly-Debug/.qtc_clangd/: compile_commands.json
QMl/build-jsonData-WebAssembly_Qt_6_2_4-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appjsonData.html  appjsonData.js  build.ninja  cmake_install.cmake  qtcsettings.cmake
QMl/build-restAPIQML-Desktop_Qt_6_2_4_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  apprestAPIQML  apprestapiqml_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
QMl/jsonData/: CMakeLists.txt  CMakeLists.txt.user.b5577ed  Main.qml  jsonhandler.cpp  jsonhandler.h  main.cpp  test   .json  test.json
QMl/restAPIQML/: CMakeLists.txt  appwrapper.cpp  appwrapper.h  main.cpp
(+524 files in other folders)
